Added one more lab

--- a/phase_1/week_3/lab/lab.ipynb
+++ b/phase_1/week_3/lab/lab.ipynb
@@ -185,6 +185,52 @@
     "else book:\n",
     "    print(\"We do not carry that book.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Credit Card Check\n",
+    "\n",
+    "Credit card numbers are often validated using some sort of algorithm. This is used to quickly check if a credit card number is valid before submitting it for processing.\n",
+    "\n",
+    "One of these algorithms works by doing the following steps on a string of numbers that represent a credit card number.\n",
+    "\n",
+    "1. Starting from the first number, multiply every other digit by 2.\n",
+    "2. Sum up all the digits of the credit card number, including the doubled numbers. \n",
+    "3. If this sum is divisible by 10, it is valid.\n",
+    "\n",
+    "Example:\n",
+    "```\n",
+    "4417 1234 5678 9113\n",
+    "\n",
+    "(4 * 2) + 4 + (1 * 2) + 7 + (1 * 2) + 2 + (3 * 2) + 4 + (5 * 2) + 6 + (7 * 2) + 8 + (9 * 2) + 1 + (1 * 2) + 3\n",
+    "\n",
+    "= 97\n",
+    "\n",
+    "Not divisible by 10, not a valid CC number\n",
+    "```\n",
+    "\n",
+    "Example:\n",
+    "```\n",
+    "4417 1234 5678 9116\n",
+    "\n",
+    "(4 * 2) + 4 + (1 * 2) + 7 + (1 * 2) + 2 + (3 * 2) + 4 + (5 * 2) + 6 + (7 * 2) + 8 + (9 * 2) + 1 + (1 * 2) + 6\n",
+    "\n",
+    "= 100\n",
+    "\n",
+    "Divisible by 10, is a valid CC number\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write solution here"
+   ]
   }
  ],
  "metadata": {
