--- a/phase_1/week_3/lab/notes.ipynb
+++ b/phase_1/week_3/lab/notes.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fix syntax and then\n",
+    "# Fixing our syntax give us\n",
     "alphabet = [\"a\", \"b\", \"c\", \"d\"]\n",
     "\n",
     "for letter in alphabet:\n",
@@ -57,6 +57,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Syntax error example\n",
+    "x = 20\n",
+    "\n",
+    "# Check if number is greater than\n",
+    "if x > 10\n",
+    "  print(\"Number is greater than 20\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Logic error example\n",
+    "x = 20\n",
+    "\n",
+    "# Check if number is greater than\n",
+    "if x < 10:\n",
+    "  print(\"Number is greater than 20\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,7 +92,7 @@
     "\n",
     "The process of debugging is an iterative process. You can view it as the following process:\n",
     "\n",
-    "1. View and understand error.\n",
+    "1. Read and interpret the error.\n",
     "2. Attempt appropriate fix.\n",
     "3. Check existence for error again.\n",
     "4. Repeat as needed."
