--- a/phase_1/week_3/data_structures/notes.ipynb
+++ b/phase_1/week_3/data_structures/notes.ipynb
@@ -38,11 +38,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "items = [\"apple\", \"banana\", \"mango\"]"
+    "items = [\"apple\", \"banana\", \"mango\", \"mango\", \"banana\", \"tomato\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apple', 'banana', 'mango']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# start at the beginning, end at (n-1) where \"n\" is the number to the right\n",
+    "\n",
+    "items[:-3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mango', 'banana', 'tomato']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# start at the n, end at the end\n",
+    "\n",
+    "items[-3:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['tomato', 'banana', 'mango', 'mango', 'banana', 'apple']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reverse a list\n",
+    "items.reverse()\n",
+    "print(items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tomato', 'banana', 'mango', 'mango', 'banana']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "items[5:0:-1]"
    ]
   },
   {
@@ -62,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +154,7 @@
        "['banana', 'peach', 'mango', 'peach']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -132,9 +215,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "banana\n",
+      "1\n",
+      "peach\n",
+      "2\n",
+      "mango\n",
+      "3\n",
+      "peach\n"
+     ]
+    }
+   ],
    "source": [
     "# alternatively we could also do\n",
     "for i in range(len(items)):\n",
@@ -157,9 +255,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple', 'banana', 'mango'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "items = {\"apple\", \"banana\", \"mango\", \"apple\", \"banana\"}\n",
     "items"
@@ -178,9 +287,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "banana\n",
+      "mango\n"
+     ]
+    }
+   ],
    "source": [
     "# append element\n",
     "items.add(\"peach\")\n",
@@ -193,6 +311,49 @@
     "\n",
     "for i in items:\n",
     "   print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "even = {2, 4, 6, 8, 10}\n",
+    "odd = {1, 3, 5, 7, 9}\n",
+    "\n",
+    "even.intersection(odd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 5, 6, 7, 8, 9, 10}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "even.union(odd)"
    ]
   },
   {
@@ -229,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,12 +416,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([0.89, 1.33, 1.55])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get apple value\n",
-    "items[\"apple”\"]\n",
+    "items[\"apple\"]\n",
     "\n",
     "# get banana value\n",
     "items[\"banana\"]\n",
@@ -283,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -300,9 +472,34 @@
     }
    ],
    "source": [
-    "for key in items:\n",
-    "   print(key)\n",
-    "   print(items[key])\n"
+    "for fruit in items:\n",
+    "   print(fruit)\n",
+    "   print(items[fruit])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tomato = {\"hello\":1,\"goodbye\":2,\"you again?\":3}\n",
+    "\n",
+    "for key,value in tomato.items():\n",
+    "    print(key,value)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_1 = [1,2,3]\n",
+    "list_2 = ['axl','is','cool']\n",
+    "\n",
+    "new_list = dict(zip(list_1,list_2))\n",
+    "print(new_list)\n"
    ]
   }
  ],
