--- a/phase_1/week_3/lab/lab.ipynb
+++ b/phase_1/week_3/lab/lab.ipynb
@@ -4,6 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Unique Elements\n",
+    "\n",
+    "Get the unique values of the following data-structs & objects created below.\n",
+    "\n",
+    "Expected Output\n",
+    "```\n",
+    "{'0', '1', '2'}\n",
+    "{'a', 'b', 'd', 'n', 's'}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'0', '1', '2'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [\"0\", \"1\", \"1\", \"1\", \"1\", \"1\", \"1\", \"0\", \"2\", \"1\", \"1\", \"1\", \"0\", \"0\", \"0\", \"0\"]\n",
+    "strng = \"abbnabsnasbansdbasbasbasbsbasbasbasnasbna\"\n",
+    "\n",
+    "# write solution here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Rock, paper, scissors\n",
     "\n",
     "Create a program that simulates the game \"rock, paper, scissors.\" You will take in two inputs, one from player 1, and one from player 2, and then compare them to each other. You will code in the rules of the game using conditionals and print out who the subsequent user is.\n",
@@ -108,7 +146,7 @@
    "source": [
     "## List Modification\n",
     "\n",
-    "Create a list of numbers from 1 to 20. Be sure to use a for-loop to do this automatically, as opposed to writing this list from scratch. After you've created this list, create another loop through each number again, but this time square the number. That is, 1 becomes 1, 2 becomes 4, 3 becomes 9, 4 becomes 16, and so on.\n",
+    "Create a list of numbers from 1 to 20. Be sure to use a for-loop to do this automatically, as opposed to writing this list from scratch. After you've created this list, create another loop through each number again, but this time square the number inside of the list. That is, 1 becomes 1, 2 becomes 4, 3 becomes 9, 4 becomes 16, and so on.\n",
     "\n",
     "Expected Output\n",
     "```\n",
@@ -132,13 +170,23 @@
    "source": [
     "## Debugging\n",
     "\n",
-    "Take a look at the \"buggy\" code located below. \"Debug\" this code by looking at the subsequent error messages, implmenting a fix, and then testing if the error still persists. Continue this process until you get no errors, and your output matches that of the expected output.\n",
+    "Take a look at the \"buggy\" code located below. \"Debug\" this code blocks by looking at the subsequent error messages, implmenting a fix, and then testing if the error still persists. Continue this process until you get no errors, and your output matches that of the expected output.\n",
     "\n",
     "Keep in mind that the structure of the original code should stay the same. Be sure to use this programmer's code to figure out intent.\n",
     "\n",
     "Expected Output\n",
     "```\n",
-    "\n",
+    "There are now 7  discounted books\n",
+    "Eternal Golden Braid\n",
+    "Naming Infinity\n",
+    "The 3 Agreements\n",
+    "Hunger Games\n",
+    "Neuromancer\n",
+    "Design patterns\n",
+    "Algorithms\n",
+    "There are now 2  discounted books\n",
+    "Superintelligence\n",
+    "How to Win Friends & Influence People\n",
     "```"
    ]
   },
@@ -157,8 +205,10 @@
     "# Place all full-price books in discount set\n",
     "for i in range(len(full_price)):\n",
     "    book = full_price[i]\n",
-    "    full_price.remove(book)\n",
     "    discount.append(book)\n",
+    "\n",
+    "# overwrite full price to be empty set\n",
+    "full_price = {}\n",
     "\n",
     "# print out size of discounted books set\n",
     "print(\"There are now\", length(discount), \" discounted books\")\n",
@@ -174,16 +224,7 @@
     "print(\"There are now\", len(discount), \" discounted books\")\n",
     "# print each book located in full-price set\n",
     "for i in range(len(full_price))\n",
-    "    print(full_price[i])\n",
-    "\n",
-    "# Ask the user which book they want to get.\n",
-    "book = input(Which book would you like?)\n",
-    "if book inside discount:\n",
-    "    print(\"Price is 5.99\")\n",
-    "elif book in full_price:\n",
-    "    print(\"Price is 10.99\")\n",
-    "else book:\n",
-    "    print(\"We do not carry that book.\")"
+    "    print(full_price[i])\n"
    ]
   },
   {
