Updated notes with review

--- a/phase_1/week_3/lab/notes.ipynb
+++ b/phase_1/week_3/lab/notes.ipynb
@@ -4,6 +4,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Data-Structures Review"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mutability\n",
+    "\n",
+    "# lists, sets, & dictionaries: mutable\n",
+    "# strings & tuples: immutable\n",
+    "\n",
+    "x = \"abcd\"\n",
+    "x = (\"a\", \"b\", \"c\", \"d\")\n",
+    "\n",
+    "# lists\n",
+    "\n",
+    "x = [\"a\", \"b\", \"c\", \"d\"]\n",
+    "\n",
+    "# x[start:stop]\n",
+    "# x[start:stop:step]\n",
+    "# list mutation\n",
+    "# loop through lists\n",
+    "# loop through lists and mutating\n",
+    "\n",
+    "# sets\n",
+    "\n",
+    "x = {\"a\", \"b\", \"c\", \"d\"}\n",
+    "\n",
+    "# set mutation\n",
+    "# loop through lists\n",
+    "# loop through sets and mutating\n",
+    "# sets type-casting\n",
+    "\n",
+    "# dictionaries\n",
+    "\n",
+    "x = {\"a\": 1, \"b\": 2, \"c\": 3, \"d\": 4}\n",
+    "\n",
+    "# dictionaries append\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Prompt \n",
     "\n",
     "What is wrong with this code?"
