--- a/phase_1/week_3/lab/lab.ipynb
+++ b/phase_1/week_3/lab/lab.ipynb
@@ -42,25 +42,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rock, paper, scissors\n",
+    "## Price Check\n",
     "\n",
-    "Create a program that simulates the game \"rock, paper, scissors.\" You will take in two inputs, one from player 1, and one from player 2, and then compare them to each other. You will code in the rules of the game using conditionals and print out who the subsequent user is.\n",
+    "Create conditionals that will check the price of a grocery item using the user's input.\n",
     "\n",
-    "Expected Output\n",
+    "Example Output\n",
     "```\n",
-    "player 1: rock\n",
-    "player 2: scissors\n",
+    "item: \"chicken liver\"\n",
     "\n",
-    "player 1 wins\n",
+    "price is 1.99\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "food_item = {\n",
+    "    \"broccoli\": 2.86,\n",
+    "    \"chicken liver\": 1.99,\n",
+    "    \"apple\": 0.33,\n",
+    "    \"orange\": 0.86,\n",
+    "    \"avocado\": 0.68,\n",
+    "    \"chips\": 4.99,\n",
+    "    \"zucchini\": 0.55,\n",
+    "    \"sushi\": 12.99,\n",
+    "    \"hummus\": 4.99\n",
+    "}\n",
+    "\n",
+    "# write solution here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Price Check pt. 2\n",
+    "\n",
+    "Expand your code from above to take in 3 items from the user.\n",
+    "\n",
+    "Calculate the total cost of all 3 of these items using the dictionary named `food_item`.\n",
+    "\n",
+    "Example Output\n",
+    "```\n",
+    "item 1: chicken liver\n",
+    "item 2: apple\n",
+    "item 3: chips\n",
+    "\n",
+    "checkout price is 7.31\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "food_item = {\n",
+    "    \"broccoli\": 2.86,\n",
+    "    \"chicken liver\": 1.99,\n",
+    "    \"apple\": 0.33,\n",
+    "    \"orange\": 0.86,\n",
+    "    \"avocado\": 0.68,\n",
+    "    \"chips\": 4.99,\n",
+    "    \"zucchini\": 0.55,\n",
+    "    \"sushi\": 12.99,\n",
+    "    \"hummus\": 4.99\n",
+    "}\n",
+    "\n",
+    "# write solution here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Price Check pt. 3\n",
+    "Expand your code from above to take in 3 items from the user of various quantity.\n",
+    "\n",
+    "Calculate the total cost of all of these items using the dictionary named `food_item`.\n",
+    "\n",
+    "Example Output\n",
+    "```\n",
+    "item 1: chicken liver\n",
+    "quantity: 2\n",
+    "item 2: apple\n",
+    "quantity: 5\n",
+    "item 3: chips\n",
+    "quantity: 1\n",
+    "\n",
+    "checkout price is 10.62\n",
+    "```\n",
+    "\n",
+    "\n",
+    "### CHALLENGE\n",
+    "Modify your code so that if the user inputs a key that doesn't exist, the program does not fail."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "food_item = {\n",
+    "    \"broccoli\": 2.86,\n",
+    "    \"chicken liver\": 1.99,\n",
+    "    \"apple\": 0.33,\n",
+    "    \"orange\": 0.86,\n",
+    "    \"avocado\": 0.68,\n",
+    "    \"chips\": 4.99,\n",
+    "    \"zucchini\": 0.55,\n",
+    "    \"sushi\": 12.99,\n",
+    "    \"hummus\": 4.99\n",
+    "}\n",
+    "\n",
     "# write solution here"
    ]
   },
@@ -144,14 +243,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## List Modification\n",
+    "## List Creation\n",
     "\n",
-    "Create a list of numbers from 1 to 20. Be sure to use a for-loop to do this automatically, as opposed to writing this list from scratch. After you've created this list, create another loop through each number again, but this time square the number inside of the list. That is, 1 becomes 1, 2 becomes 4, 3 becomes 9, 4 becomes 16, and so on.\n",
+    "Create a list of numbers from 1 to 20. Be sure to use a for-loop to do this automatically, as opposed to writing this list from scratch. \n",
     "\n",
     "Expected Output\n",
     "```\n",
     "[1,2,3,4,5,6,7,...]\n",
-    "[1,4,9,16,25,36,49,...]\n",
     "```"
    ]
   },
@@ -168,25 +266,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Debugging\n",
+    "## List Creation pt. 2\n",
     "\n",
-    "Take a look at the \"buggy\" code located below. \"Debug\" this code blocks by looking at the subsequent error messages, implmenting a fix, and then testing if the error still persists. Continue this process until you get no errors, and your output matches that of the expected output.\n",
-    "\n",
-    "Keep in mind that the structure of the original code should stay the same. Be sure to use this programmer's code to figure out intent.\n",
+    "Create a list of squared numbers (n^2), where n goes from 1 to 20. Be sure to use a for-loop to do this automatically, as opposed to writing this list from scratch. \n",
     "\n",
     "Expected Output\n",
     "```\n",
-    "There are now 7  discounted books\n",
-    "Eternal Golden Braid\n",
-    "Naming Infinity\n",
-    "The 3 Agreements\n",
-    "Hunger Games\n",
-    "Neuromancer\n",
-    "Design patterns\n",
-    "Algorithms\n",
-    "There are now 2  discounted books\n",
-    "Superintelligence\n",
-    "How to Win Friends & Influence People\n",
+    "[1,4,9,16,25,36,49,...]\n",
+    "\n",
     "```"
    ]
   },
@@ -196,81 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# implement fixes below\n",
-    "\n",
-    "# create sets of discounted and full-price books\n",
-    "discount = {\"Hunger Games\", \"The 3 Agreements\", \"Naming Infinity\", \"Neuromancer\"}\n",
-    "full_price = {\"Eternal Golden Braid\", \"Algorithms\", \"Design patterns\"}\n",
-    "\n",
-    "# Place all full-price books in discount set\n",
-    "for i in range(len(full_price)):\n",
-    "    book = full_price[i]\n",
-    "    discount.append(book)\n",
-    "\n",
-    "# overwrite full price to be empty set\n",
-    "full_price = {}\n",
-    "\n",
-    "# print out size of discounted books set\n",
-    "print(\"There are now\", length(discount), \" discounted books\")\n",
-    "# print each book located in the discount set\n",
-    "for book in discount:\n",
-    "    print(book)\n",
-    "\n",
-    "# Add new books to full_price\n",
-    "full_price.add(\"Superintelligence\")\n",
-    "full_price.add(\"How to Win Friends & Influence People\")\n",
-    "\n",
-    "# print out size of full-price books set\n",
-    "print(\"There are now\", len(discount), \" discounted books\")\n",
-    "# print each book located in full-price set\n",
-    "for i in range(len(full_price))\n",
-    "    print(full_price[i])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Credit Card Check\n",
-    "\n",
-    "Credit card numbers are often validated using some sort of algorithm. This is used to quickly check if a credit card number is valid before submitting it for processing.\n",
-    "\n",
-    "One of these algorithms works by doing the following steps on a string of numbers that represent a credit card number.\n",
-    "\n",
-    "1. Starting from the first number, multiply every other digit by 2.\n",
-    "2. Sum up all the digits of the credit card number, including the doubled numbers. \n",
-    "3. If this sum is divisible by 10, it is valid.\n",
-    "\n",
-    "Example:\n",
-    "```\n",
-    "4417 1234 5678 9113\n",
-    "\n",
-    "(4 * 2) + 4 + (1 * 2) + 7 + (1 * 2) + 2 + (3 * 2) + 4 + (5 * 2) + 6 + (7 * 2) + 8 + (9 * 2) + 1 + (1 * 2) + 3\n",
-    "\n",
-    "= 97\n",
-    "\n",
-    "Not divisible by 10, not a valid CC number\n",
-    "```\n",
-    "\n",
-    "Example:\n",
-    "```\n",
-    "4417 1234 5678 9116\n",
-    "\n",
-    "(4 * 2) + 4 + (1 * 2) + 7 + (1 * 2) + 2 + (3 * 2) + 4 + (5 * 2) + 6 + (7 * 2) + 8 + (9 * 2) + 1 + (1 * 2) + 6\n",
-    "\n",
-    "= 100\n",
-    "\n",
-    "Divisible by 10, is a valid CC number\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# write solution here"
+    "## write solution here "
    ]
   }
  ],
