--- a/phase_1/week_3/lab/notes.ipynb
+++ b/phase_1/week_3/lab/notes.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data-Structures Review"
+    "## Lists Review\n",
+    "\n",
+    "Lists are:\n",
+    "* Mutable\n",
+    "* Organized, therefore use indices \n",
+    "* Indicated using the square brackets []\n",
+    "\n",
+    "[Lists documentation](https://docs.python.org/3/tutorial/datastructures.html#more-on-lists)"
    ]
   },
   {
@@ -13,47 +20,163 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mutability\n",
+    "# create a list named \"l\"\n",
+    "l = [\"a\", \"b\", \"c\", \"d\", 1, \"hello\", True]\n",
     "\n",
-    "# lists, sets, & dictionaries: mutable\n",
-    "# strings & tuples: immutable\n",
+    "# print the length of this list\n",
+    "print(len(l))\n",
     "\n",
-    "x = \"abcd\"\n",
-    "x = (\"a\", \"b\", \"c\", \"d\")\n",
+    "# get first value using index\n",
+    "print(l[0])\n",
+    "# get the last value using the negative indices\n",
+    "print(l[-1])\n",
     "\n",
-    "# lists\n",
+    "# get everything from the first element to the 3rd using list slicing\n",
+    "print(l[0:4])\n",
+    "# alternatively...\n",
+    "print(l[:4])\n",
     "\n",
-    "x = [\"a\", \"b\", \"c\", \"d\"]\n",
+    "# get everything from the fourth element to the last using list slicing\n",
+    "print(l[4:7])\n",
+    "# alternatively...\n",
+    "print(l[4:])\n",
     "\n",
-    "# x[start:stop]\n",
-    "# x[start:stop:step]\n",
-    "# list mutation\n",
-    "# loop through lists\n",
-    "# loop through lists and mutating\n",
+    "# get every other number of a list using list slicing \n",
+    "print(l[0:7:2])\n",
+    "# alternatively...\n",
+    "print(l[::2])\n",
     "\n",
-    "# sets\n",
+    "# Mutability: Change first value using index\n",
+    "l[0] = \"f\"\n",
     "\n",
-    "x = {\"a\", \"b\", \"c\", \"d\"}\n",
+    "# print each value using a for-loop\n",
+    "for a in l:\n",
+    " print(a, end=\" \")\n",
     "\n",
-    "# set mutation\n",
-    "# loop through lists\n",
-    "# loop through sets and mutating\n",
+    "# Mutability: append values\n",
+    "l.append(\"b\")\n",
+    "print(l)\n",
+    "# Mutability: remove values\n",
+    "l.remove(\"b\")\n",
+    "print(l)\n",
+    "# Mutability: remove values, but this time with \"pop\"\n",
+    "l.pop(1)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## String Review\n",
+    "\n",
+    "While we think of strings as data-types that represent text, we can also treat them like immutable \"list\" data-structures.\n",
+    "\n",
+    "Strings are:\n",
+    "* Immutable\n",
+    "* Organized, therefore use indices \n",
+    "* Indicated using quotes \"\"\n",
+    "\n",
+    "[String documentation](https://docs.python.org/3/library/stdtypes.html#string-methods)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a string named \"st\"\n",
+    "st = \"abcd\"\n",
+    "print(st)\n",
+    "\n",
+    "# Similarity with lists\n",
+    "# get length of string\n",
+    "print(len(st))\n",
+    "# get first value using index\n",
+    "print(st[0])\n",
+    "# get the last value using the negative indices\n",
+    "print(st[-1])\n",
+    "\n",
+    "\n",
+    "# Immutability: we cannot change the characters of a string!\n",
+    "# st[0] = \"f\"\n",
+    "\n",
+    "# Immutabiity: we can still concatenate with other strings\n",
+    "st += \"ef\"\n",
+    "print(st)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sets Review\n",
+    "\n",
+    "Sets are:\n",
+    "* Mutable\n",
+    "* Unorganized, therefore do not use indices \n",
+    "* Indicated using the curly brackets {}\n",
+    "\n",
+    "[Sets documentation](https://docs.python.org/3/library/stdtypes.html#set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a set named \"s\"\n",
+    "s = {\"a\", \"b\", \"c\", \"d\", \"d\"}\n",
+    "\n",
+    "# print the length of this set\n",
+    "print(len(s))\n",
+    "# TRY to print an index element (this will fail!)\n",
+    "# print(s[0])\n",
+    "# looping still works\n",
+    "for x in s:\n",
+    "  print(x)\n",
+    "# creating an empty set\n",
+    "eSet = set()\n",
+    "\n",
+    "# Mutability: append values\n",
+    "s.add(\"d\")\n",
+    "# Mutability: remove values\n",
+    "s.remove(\"d\")\n",
+    "\n",
     "# sets type-casting\n",
+    "st = \"abcdabcd\"\n",
+    "sentence = \"hello world, hello world\"\n",
+    "slist = [\"hello\", \"world\", \"hello\", \"world\"]\n",
     "\n",
-    "# dictionaries\n",
+    "# notice the effects of type-casting on each data-type\n",
+    "strSet = set(st)\n",
+    "# get unique letters of string\n",
+    "print(strSet)\n",
     "\n",
-    "x = {\"a\": 1, \"b\": 2, \"c\": 3, \"d\": 4}\n",
+    "sentSet = set(sentence)\n",
+    "# get unique letters of string\n",
+    "print(sentSet)\n",
     "\n",
-    "# dictionaries append\n"
+    "lstSet = set(slist)\n",
+    "# get unique elements of list\n",
+    "print(lstSet)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prompt \n",
+    "## Dictionaries Review\n",
     "\n",
-    "What is wrong with this code?"
+    "Dictionaries are:\n",
+    "* Mutable\n",
+    "* Unorganized, therefore do not use indices \n",
+    "* Indicated using the curly brackets {}\n",
+    "* Indicated with key-value pairs seperated by a colon! (ex: \"a\": 1)\n",
+    "\n",
+    "[Dictionaries documentation](https://docs.python.org/3/tutorial/datastructures.html#dictionaries)"
    ]
   },
   {
@@ -62,22 +185,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alphabet = [\"a\", \"b\", \"c\", \"d\"]\n",
+    "# create a dictionary named \"d\"\n",
+    "d = {\"a\": 1, \"b\": 2, \"c\": 3, \"d\": 4}\n",
     "\n",
-    "for letter in alphabet\n",
-    "  print(letter)\n",
+    "print(d)\n",
+    "# print the length of this dictionary\n",
+    "print(len(d))\n",
     "\n",
-    "print(letter[1], \"is the first letter\")"
+    "# access value of key \"a\"\n",
+    "print(d[\"a\"])\n",
+    "# access value of key \"b\"\n",
+    "print(d[\"b\"])\n",
+    "\n",
+    "# loop through dictionary\n",
+    "for key in d:\n",
+    "  print(key)\n",
+    "\n",
+    "\n",
+    "# Mutability: overwrite values\n",
+    "d[\"a\"] = 26\n",
+    "# Mutability: append values\n",
+    "d[\"e\"] = 5\n",
+    "# Mutability: remove values\n",
+    "d.pop(\"e\")\n",
+    "\n",
+    "# d['e'] is the same thing as 5\n",
+    "print(d['e'] == 5)\n",
+    "\n",
+    "# reused in a conditional\n",
+    "if d['e'] == 5:\n",
+    "  print(\"5 is the val of e\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Debugging\n",
+    "## Tuples\n",
     "\n",
-    "* Syntax Errors: Errors in the way our code is written. Usually easy to catch & fix.\n",
-    "* Logic Errors: Errors in the behavior of our code. Usually harder to catch & fix! "
+    "Tuples are:\n",
+    "* Immutable\n",
+    "* Organized, therefore use indices \n",
+    "* Indicated using parentheses ()\n",
+    "\n",
+    "[Tuples documentation](https://docs.python.org/3/tutorial/datastructures.html#tuples-and-sequences)"
    ]
   },
   {
@@ -86,82 +237,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fixing our syntax give us\n",
-    "alphabet = [\"a\", \"b\", \"c\", \"d\"]\n",
+    "# create a set named \"t\"\n",
+    "t = (\"a\", \"b\", 3, 4)\n",
     "\n",
-    "for letter in alphabet:\n",
-    "  print(letter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# focus on fixing logic\n",
-    "print(letter[0], \"is the first letter\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Syntax error example\n",
-    "x = 20\n",
+    "print(t)\n",
+    "# print the length of this tuple\n",
+    "print(len(t))\n",
     "\n",
-    "# Check if number is greater than\n",
-    "if x > 10\n",
-    "  print(\"Number is greater than 20\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Logic error example\n",
-    "x = 20\n",
+    "# get first value using index\n",
+    "print(t[0])\n",
+    "# get the last value using the negative indices\n",
+    "print(t[-1])\n",
     "\n",
-    "# Check if number is greater than\n",
-    "if x < 10:\n",
-    "  print(\"Number is greater than 20\")"
+    "# Immutability: we cannot change the elements of a tuple!\n",
+    "# t[0] = \"f\"\n",
+    "\n",
+    "# Immutabiity: we can still concatenate with other tuples\n",
+    "t = t + (\"e\", \"f\")\n",
+    "print(t)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Debugging Techniques\n",
+    "## Membership\n",
     "\n",
-    "The process of debugging is an iterative process. You can view it as the following process:\n",
+    "While we can always make an algorithm that checks for the existence of an item, we can always just use the `in` keyword."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# membership in lists\n",
+    "print(l)\n",
+    "print(\"a\" in l)\n",
+    "print(\"f\" in l)\n",
     "\n",
-    "1. Read and interpret the error.\n",
-    "2. Attempt appropriate fix.\n",
-    "3. Check existence for error again.\n",
-    "4. Repeat as needed."
+    "# membership in sets\n",
+    "print(s)\n",
+    "print(\"a\" in s)\n",
+    "print(4 in s)\n",
+    "\n",
+    "# membership in strings\n",
+    "print(st)\n",
+    "print(\"a\" in st)\n",
+    "print(\"f\" in st)\n",
+    "\n",
+    "\n",
+    "# membership in dictionaries (only checks keys!!)\n",
+    "print(d)\n",
+    "print(1 in d)\n",
+    "print(\"f\" in d)"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "name": "python",
-   "version": "3.10.7"
+   "name": "python"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
