--- a/phase_1/week_3/lab/notes.ipynb
+++ b/phase_1/week_3/lab/notes.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Lists are:\n",
     "* Mutable\n",
-    "* Organized, therefore use indices \n",
+    "* Organized, use indices \n",
     "* Indicated using the square brackets []\n",
     "\n",
     "[Lists documentation](https://docs.python.org/3/tutorial/datastructures.html#more-on-lists)"
@@ -16,22 +16,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 1, 'hello', True] \n",
+      "\n",
+      "length is:  7\n",
+      "first element is:  a\n",
+      "last element is:  True\n",
+      "\n",
+      "## sublisting ##\n",
+      "['a', 'b', 'c', 'd']\n",
+      "['a', 'b', 'c', 'd']\n",
+      "[1, 'hello', True]\n",
+      "[1, 'hello', True]\n",
+      "['a', 'c', 1, True]\n",
+      "['a', 'c', 1, True]\n",
+      "f b c d 1 hello True ['f', 'b', 'c', 'd', 1, 'hello', True, 'b']\n",
+      "['f', 'c', 'd', 1, 'hello', True, 'b']\n",
+      "['f', 'd', 1, 'hello', True, 'b']\n"
+     ]
+    }
+   ],
    "source": [
     "# create a list named \"l\"\n",
     "l = [\"a\", \"b\", \"c\", \"d\", 1, \"hello\", True]\n",
-    "\n",
+    "print(l, \"\\n\")\n",
     "# print the length of this list\n",
-    "print(len(l))\n",
+    "print(\"length is: \", len(l))\n",
     "\n",
     "# get first value using index\n",
-    "print(l[0])\n",
+    "print(\"first element is: \", l[0])\n",
     "# get the last value using the negative indices\n",
-    "print(l[-1])\n",
+    "print(\"last element is: \", l[-1])\n",
     "\n",
     "# get everything from the first element to the 3rd using list slicing\n",
+    "print(\"\\n## sublisting ##\")\n",
     "print(l[0:4])\n",
     "# alternatively...\n",
     "print(l[:4])\n",
@@ -82,29 +106,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcd \n",
+      "\n",
+      "length is:  4\n",
+      "first element is:  a\n",
+      "last element is:  d\n",
+      "\n",
+      "## substringing ##\n",
+      "abc\n",
+      "abc\n",
+      "ac\n",
+      "ac\n",
+      "\n",
+      "results of concatenation:  abcdef\n"
+     ]
+    }
+   ],
    "source": [
     "# create a string named \"st\"\n",
     "st = \"abcd\"\n",
-    "print(st)\n",
+    "print(st, \"\\n\")\n",
     "\n",
     "# Similarity with lists\n",
     "# get length of string\n",
-    "print(len(st))\n",
+    "print(\"length is: \", len(st))\n",
     "# get first value using index\n",
-    "print(st[0])\n",
+    "print(\"first element is: \", st[0])\n",
     "# get the last value using the negative indices\n",
-    "print(st[-1])\n",
+    "print(\"last element is: \", st[-1])\n",
     "\n",
+    "# we can also do string slicing or \"substringing\"\n",
+    "# get everything from the first element to the 2nd \n",
+    "print(\"\\n## substringing ##\")\n",
+    "print(st[0:3])\n",
+    "# alternatively ...\n",
+    "print(st[:3])\n",
+    "# skip every other character\n",
+    "print(st[0:4:2])\n",
+    "# alternatively ...\n",
+    "print(st[::2])\n",
     "\n",
     "# Immutability: we cannot change the characters of a string!\n",
     "# st[0] = \"f\"\n",
     "\n",
     "# Immutabiity: we can still concatenate with other strings\n",
     "st += \"ef\"\n",
-    "print(st)\n"
+    "print(\"\\nresults of concatenation: \", st)\n"
    ]
   },
   {
@@ -123,9 +177,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "a\n",
+      "{'b', 'd', 'c', 'a'}\n",
+      "{'e', ' ', ',', 'r', 'o', 'w', 'd', 'h', 'l'}\n",
+      "{'world', 'hello'}\n"
+     ]
+    }
+   ],
    "source": [
     "# create a set named \"s\"\n",
     "s = {\"a\", \"b\", \"c\", \"d\", \"d\"}\n",
@@ -181,9 +250,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 2, 'c': 3, 'd': 4}\n",
+      "4\n",
+      "1\n",
+      "2\n",
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "True\n",
+      "5 is the val of e\n"
+     ]
+    }
+   ],
    "source": [
     "# create a dictionary named \"d\"\n",
     "d = {\"a\": 1, \"b\": 2, \"c\": 3, \"d\": 4}\n",
@@ -207,7 +293,7 @@
     "# Mutability: append values\n",
     "d[\"e\"] = 5\n",
     "# Mutability: remove values\n",
-    "d.pop(\"e\")\n",
+    "d.pop(\"a\")\n",
     "\n",
     "# d['e'] is the same thing as 5\n",
     "print(d['e'] == 5)\n",
@@ -268,9 +354,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'l' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\saidmf\\Desktop\\TKH\\DS_22\\phase_1\\week_3\\lab\\notes.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_3/lab/notes.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# membership in lists\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_3/lab/notes.ipynb#X33sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(l)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_3/lab/notes.ipynb#X33sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39ma\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m l)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_3/lab/notes.ipynb#X33sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m l)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'l' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# membership in lists\n",
     "print(l)\n",
@@ -296,10 +394,29 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.7 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.7"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
