--- a/phase_1/week_4/functions_methods_1/task_challenge.ipynb
+++ b/phase_1/week_4/functions_methods_1/task_challenge.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##"
+    "## Evaluate a Quadratic\n",
+    "\n",
+    "Write a Python function `evalQuadratic(a, b, c, x)` that returns the value of the quadratic `a*x^2 + b*x + c` \n",
+    "\n",
+    "This function takes in four numbers and returns a single number.\n",
+    "\n",
+    "Expected Output\n",
+    "```\n",
+    "76.3888\n",
+    "```"
    ]
   },
   {
@@ -12,13 +21,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def evalQuadratic(a, b, c, x):\n",
+    "    return\n",
+    "\n",
+    "result = evalQuadratic(4.81, -7.37, 1.33, 4.79)\n",
+    "result"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##"
+    "## Inner Functions\n",
+    "\n",
+    "Below is the function `foo`, which contains an \"inner\" function called `bar`.\n",
+    "\n",
+    "Without running your code, predict what the code will output given the listed function calls.\n",
+    "\n",
+    "Consult the following documentation for insight:\n",
+    "* https://docs.python.org/3/tutorial/classes.html#python-scopes-and-namespaces \n",
+    "* https://docs.python.org/3/tutorial/classes.html#python-scopes-and-namespaces "
    ]
   },
   {
@@ -26,13 +49,54 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def foo(x, y = 5):\n",
+    "   def bar(x):\n",
+    "      return x + 1\n",
+    "   return bar(y * 2)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##"
+    "foo(3)\n",
+    "\n",
+    "`write output here`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "foo(3, 0)\n",
+    "\n",
+    "`write output here`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "foo(2)\n",
+    "\n",
+    "`write output here`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Greatest Common Divisor\n",
+    "\n",
+    "The greatest common divisor of two positive integers is the largest integer that divides each of them without remainder. \n",
+    "\n",
+    "Write a function, gcd(a, b), that implements this idea. \n",
+    "\n",
+    "Expected Output\n",
+    "```\n",
+    "4\n",
+    "```"
    ]
   },
   {
@@ -40,7 +104,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def gcd(a, b):\n",
+    "    return\n",
+    "\n",
+    "result = gcd(12, 4)\n",
+    "result"
+   ]
   }
  ],
  "metadata": {
