--- a/phase_1/week_4/functions_methods_2/functions_methodsII_task.ipynb
+++ b/phase_1/week_4/functions_methods_2/functions_methodsII_task.ipynb
@@ -19,6 +19,8 @@
     "num2 = 5\n",
     "\n",
     "def add(a, b):\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
     "    return a + b\n",
     "\n",
     "add(10, 5)"
@@ -43,6 +45,17 @@
     "num2 = 5\n",
     "\n",
     "def multiply(a, b):\n",
+    "    \"\"\"Multiply two values together\n",
+    "\n",
+    "    I take in two values\n",
+    "\n",
+    "    Parameter\n",
+    "    ---------\n",
+    "\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    \"\"\"\n",
     "    return a * b\n",
     "\n",
     "multiply(num1, num2)"
@@ -69,7 +82,11 @@
     "y = 100\n",
     "z = 86\n",
     "\n",
-    "# write solution here"
+    "# write solution here\n",
+    "def average(a, b, c):\n",
+    "    return (a + b + c)/3\n",
+    "\n",
+    "print(average(x, y, z))\n"
    ]
   },
   {
